--- a/angular-web-app/src/app/components/_admin/manager-users/manager-users.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-users/manager-users.component.html
@@ -2,6 +2,91 @@
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
+  <div class="row mb-5">
+    <div class="col-12" *ngIf="isLoadingResults">
+      <app-loading [message]="'Gebruikers laden...'"></app-loading>
+    </div>
+
+    <div class="col-12">
+      <!-- Table Filter -->
+      <mat-form-field [appearance]="formStyle" [color]="formColor" class="w-100">
+        <button mat-button matPrefix mat-icon-button>
+          <mat-icon>search</mat-icon>
+        </button>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Vraag" #input>
+        <button mat-button *ngIf="input.value" matSuffix mat-icon-button aria-label="Clear"
+          (click)="input.value=''; resetFilter()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+
+      <!-- Elevation -->
+      <div class="mat-elevation-z8">
+        <!-- Table -->
+        <div class="table-responsive">
+          <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="displayName"
+            matSortDirection="desc">
+
+            <ng-container matColumnDef="photoURL">
+              <th mat-header-cell *matHeaderCellDef> Foto </th>
+              <td mat-cell *matCellDef="let item">
+                <img *ngIf="item.photoURL" [src]="item.photoURL" class="rounded-circle img-table mat-elevation-z2">
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="uid">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+              <td mat-cell *matCellDef="let item"> {{ item.uid }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+              <td mat-cell *matCellDef="let item"> {{ item.email }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="displayName">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Naam </th>
+              <td mat-cell *matCellDef="let item"> {{ item.displayName }} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="emailVerified">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Email bevestigd </th>
+              <td mat-cell *matCellDef="let item">
+                <mat-slide-toggle [checked]="item.emailVerified" disabled></mat-slide-toggle>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="options">
+              <th mat-header-cell *matHeaderCellDef> Opties </th>
+              <td mat-cell *matCellDef="let item">
+                <button mat-icon-button color="accent" (click)="setModalItem(item); openModal(modalContent)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" (click)="deleteItem(item.id)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="7">Geen data beschikbaar.</td>
+            </tr>
+          </table>
+        </div>
+
+        <!-- Paginator -->
+        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons>
+        </mat-paginator>
+
+      </div>
+    </div>
+  </div>
+
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z8">
@@ -50,3 +135,49 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- Modal -->
+<ng-template #modalContent>
+
+  <mat-dialog-content>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h4 class="title-underlined">Bewerken</h4>
+        </div>
+      </div>
+
+      <form #editUserForm="ngForm" style="width: 400px;">
+        <div class="form-group row">
+          <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="col-12">
+            <mat-label>Foto</mat-label>
+            <input matInput type="text" [(ngModel)]="modalUser.photoURL" name="photoURL" id="photoURL"
+              #photoURLInput="ngModel" />
+          </mat-form-field>
+        </div>
+        <div class="form-group row">
+          <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="col-12">
+            <mat-label>Naam</mat-label>
+            <input matInput type="text" [(ngModel)]="modalUser.displayName" name="displayName" id="displayName"
+              #displayNameInput="ngModel" />
+          </mat-form-field>
+        </div>
+        <div class="form-group row">
+          <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="col-12">
+            <mat-label>Email</mat-label>
+            <input matInput type="text" [(ngModel)]="modalUser.email" name="userEmail" id="userEmail"
+              #userEmailInput="ngModel" />
+          </mat-form-field>
+        </div>
+      </form>
+    </div>
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button mat-raised-button color="accent" [disabled]="editUserForm.form.pristine" (click)="updateUser()">Opslaan</button>
+    <button mat-button mat-dialog-close cdkFocusInitial>Sluit</button>
+  </mat-dialog-actions>
+
+</ng-template>
