--- a/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
@@ -31,7 +31,7 @@
             <!-- <ng-container matColumnDef="image" sticky>
               <th mat-header-cell *matHeaderCellDef> Afbeelding </th>
               <td mat-cell *matCellDef="let item">
-                <img [src]="item.image" class="rounded img-table mat-elevation-z2">
+                <img *ngIf="item.image" [src]="item.image" class="rounded img-table mat-elevation-z2">
               </td>
             </ng-container> -->
 
