--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -32,7 +32,7 @@
             <ng-container matColumnDef="thumbnail" sticky>
               <th mat-header-cell *matHeaderCellDef> Afbeelding </th>
               <td mat-cell *matCellDef="let painting">
-                <img [src]="painting.thumbnail" alt="{{ painting.title }}" class="rounded img-table mat-elevation-z2">
+                <img *ngIf="painting.thumbnail" [src]="painting.thumbnail" alt="{{ painting.title }}" class="rounded img-table mat-elevation-z2">
               </td>
             </ng-container>
 
