--- a/angular-web-app/src/app/components/_admin/comp-contact-cards/comp-contact-cards.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-cards/comp-contact-cards.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid p-0" *ngIf="services">
+<div class="container-fluid p-0" *ngIf="services && generalContent">
   <div class="row mb-4">
     <div class="col-12">
 
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <h4 class="title-underlined">Resultaat</h4>
         <div *ngIf="services.active">
           <app-section-title [title]="services.title" [subTitle]="services.subTitle" [text]="services.text">
@@ -25,7 +25,7 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <form (ngSubmit)="onSubmit()" #contactCardsForm="ngForm">
 
           <div class="form-group row">
@@ -43,7 +43,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="contactCardContentTitle" placeholder="Titel"
                 name="contactCardContentTitle" [(ngModel)]="services.title" #contactCardContentTitleInput="ngModel"
@@ -53,7 +53,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="contactCardContentSubTitle" placeholder="Subtitel"
                 name="contactCardContentSubTitle" [(ngModel)]="services.subTitle"
@@ -63,7 +63,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Content text</mat-label>
               <textarea rows="1" matInput type="text" id="contactCardContentText" placeholder="Text"
                 name="contactCardContentText" [(ngModel)]="services.text" #contactCardContentTextInput="ngModel"
@@ -76,7 +76,7 @@
 
           <div class="form-group row">
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="contactCard0Title" placeholder="Titel" name="contactCard0Title"
                   [(ngModel)]="services.services[0].title" #contactCard0TitleInput="ngModel" required>
@@ -85,7 +85,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="contactCard0Icon" placeholder="Icon" name="contactCard0Icon"
                   [(ngModel)]="services.services[0].icon" #contactCard0IconInput="ngModel" required>
@@ -94,7 +94,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="contactCard0Text" placeholder="Text" name="contactCard0Text"
                   [(ngModel)]="services.services[0].description">
@@ -102,7 +102,7 @@
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="contactCard1Title" placeholder="Titel" name="contactCard1Title"
                   [(ngModel)]="services.services[1].title" #contactCard1TitleInput="ngModel" required>
@@ -111,7 +111,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="contactCard1Icon" placeholder="Icon" name="contactCard1Icon"
                   [(ngModel)]="services.services[1].icon" #contactCard1IconInput="ngModel" required>
@@ -120,7 +120,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="contactCard1Text" placeholder="Text" name="contactCard1Text"
                   [(ngModel)]="services.services[1].description">
@@ -128,7 +128,7 @@
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="contactCard2Title" placeholder="Titel" name="contactCard2Title"
                   [(ngModel)]="services.services[2].title" #contactCard2TitleInput="ngModel" required>
@@ -137,7 +137,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="contactCard2Icon" placeholder="Icon" name="contactCard2Icon"
                   [(ngModel)]="services.services[2].icon" #contactCard2IconInput="ngModel" required>
@@ -146,7 +146,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="contactCard2Text" placeholder="Text" name="contactCard2Text"
                   [(ngModel)]="services.services[2].description">
