--- a/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" *ngIf="cta">
+<div class="container-fluid p-0" *ngIf="cta && generalContent">
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z8">
@@ -40,7 +40,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="ctaContentTitle" placeholder="Titel" name="ctaContentTitle"
                 [(ngModel)]="cta.title" #ctaContentTitleInput="ngModel" required>
@@ -48,7 +48,7 @@
                 Titel is verplicht
               </mat-error>
             </mat-form-field>
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="ctaContentSubTitle" placeholder="Subtitel" name="ctaContentSubTitle"
                 [(ngModel)]="cta.subTitle" #ctaContentSubTitleInput="ngModel" required>
@@ -59,7 +59,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Achtergrond</mat-label>
               <mat-select id="ctaContentImage" name="ctaContentImage" [(ngModel)]="cta.image">
                 <mat-option [value]="backgrounds[0]">
@@ -79,14 +79,14 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-xs-12 col-sm-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-xs-12 col-sm-6">
               <mat-label>Knop label</mat-label>
               <input matInput type="text" id="ctaContentBtnLabel" placeholder="Label" name="ctaContentBtnLabel"
                 [(ngModel)]="cta.btnText" #ctaContentBtnLabelInput="ngModel" required>
               <mat-error [hidden]="ctaContentBtnLabelInput.valid || ctaContentBtnLabelInput.pristine">Label is verplicht
               </mat-error>
             </mat-form-field>
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-xs-12 col-sm-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-xs-12 col-sm-6">
               <mat-label>Knop link</mat-label>
               <input matInput type="text" id="ctaContentBtnLink" placeholder="Link" name="ctaContentBtnLink"
                 [(ngModel)]="cta.btnLink" #ctaContentBtnLinkInput="ngModel" required>
