--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" *ngIf="featured">
+<div class="container-fluid p-0" *ngIf="featured && generalContent">
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z8">
@@ -46,7 +46,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="featuredContentTitle" placeholder="Titel" name="featuredContentTitle"
                 [(ngModel)]="featured.title" #featuredContentTitleInput="ngModel" required />
@@ -55,7 +55,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="featuredContentSubTitle" placeholder="Subtitel"
                 name="featuredContentSubTitle" [(ngModel)]="featured.subTitle" #featuredContentSubTitleInput="ngModel"
@@ -65,7 +65,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Content text</mat-label>
               <textarea rows="1" matInput type="text" id="featuredContentText" placeholder="Text"
                 name="featuredContentText" [(ngModel)]="featured.text" #featuredContentTextInput="ngModel" required>
@@ -75,7 +75,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Schilderij</mat-label>
               <mat-select id="featuredContentPainting" name="featuredContentPainting" [(ngModel)]="featured.painting"
                 #featuredContentPaintingInput="ngModel" required>
@@ -89,7 +89,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Hoogte</mat-label>
               <input matInput type="text" id="featuredContentHeight" placeholder="Hoogte" name="featuredContentHeight"
                 [(ngModel)]="featured.maxHeight" #featuredContentHeightInput="ngModel" required />
