--- a/angular-web-app/src/app/components/_admin/comp-gallery/comp-gallery.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-gallery/comp-gallery.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" *ngIf="galleryContent">
+<div class="container-fluid p-0" *ngIf="galleryContent && generalContent">
     <div class="row mb-4">
         <div class="col-12">
             <mat-card class="mat-elevation-z8">
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="form-group row">
-                        <mat-form-field [appearance]="formStyle" [color]="formColor"
+                        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
                             class="form-field col-sm-12 col-md-6">
                             <mat-label>Content titel</mat-label>
                             <input matInput type="text" id="galleryContentTitle" placeholder="Titel"
@@ -34,7 +34,7 @@
                             </mat-error>
                         </mat-form-field>
 
-                        <mat-form-field [appearance]="formStyle" [color]="formColor"
+                        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
                             class="form-field col-sm-12 col-md-6">
                             <mat-label>Content subtitel</mat-label>
                             <input matInput type="text" id="galleryContentSubTitle" placeholder="Subtitel"
@@ -46,7 +46,7 @@
                             </mat-error>
                         </mat-form-field>
 
-                        <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+                        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
                             <mat-label>Content text</mat-label>
                             <textarea rows="1" matInput type="text" id="galleryContentText" placeholder="Text"
                                 name="galleryContentText" [(ngModel)]="galleryContent.text"
