--- a/angular-web-app/src/app/components/_admin/comp-header/comp-header.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-header/comp-header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" *ngIf="pageTitle">
+<div class="container-fluid p-0" *ngIf="pageTitle && generalContent">
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z8">
@@ -16,7 +16,7 @@
         <form (ngSubmit)="onSubmit()" #headerForm="ngForm">
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Titel</mat-label>
               <input matInput type="text" id="defaultTitle" placeholder="Titel" name="defaultTitle"
                 [(ngModel)]="pageTitle.title" #title="ngModel" required>
@@ -25,7 +25,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Subtitel</mat-label>
               <input matInput type="text" id="defaultSubTitle" placeholder="Subtitel" name="defaultSubTitle"
                 [(ngModel)]="pageTitle.subTitle" #subTitle="ngModel" required>
@@ -34,10 +34,15 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field *ngIf="fileUploads" [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12">
               <mat-label>Afbeelding</mat-label>
-              <input matInput type="text" id="defaultImage" placeholder="Afbeelding" name="defaultImage"
-                [(ngModel)]="pageTitle.image">
+              <mat-select id="defaultImage" name="defaultImage" [(ngModel)]="pageTitle.image" #defaultImage="ngModel">
+                <mat-option *ngFor="let file of fileUploads" [value]="file.url">
+                  <img [src]="file.url" alt="thumbnail" class="img-thumbnail img-dropdown" />
+                  {{ file.name }}
+                </mat-option>
+              </mat-select>
               <mat-hint>
                 Als deze afbeelding leeg is zal de standaard header afbeelding getoond worden.
               </mat-hint>
