--- a/angular-web-app/src/app/components/_admin/comp-news/comp-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-news/comp-news.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" *ngIf="newsContent">
+<div class="container-fluid p-0" *ngIf="newsContent && generalContent">
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z8">
@@ -24,7 +24,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="newsContentTitle" placeholder="Titel" name="newsContentTitle"
                 [(ngModel)]="newsContent.title" #newsContentTitleInput="ngModel" required>
@@ -33,7 +33,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="newsContentSubTitle" placeholder="Subtitel" name="newsContentSubTitle"
                 [(ngModel)]="newsContent.subTitle" #newsContentSubTitleInput="ngModel" required>
@@ -42,7 +42,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Content text</mat-label>
               <textarea rows="1" matInput type="text" id="newsContentText" placeholder="Text" name="newsContentText"
                 [(ngModel)]="newsContent.text" #newsContentTextInput="ngModel" required> </textarea>
