--- a/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" *ngIf="services">
+<div class="container-fluid p-0" *ngIf="services && generalContent">
   <div class="row mb-4">
     <div class="col-12">
       <mat-card class="mat-elevation-z8">
@@ -42,7 +42,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="servicesContentTitle" placeholder="Titel" name="servicesContentTitle"
                 [(ngModel)]="services.title" #servicesContentTitleInput="ngModel" required>
@@ -51,7 +51,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="servicesContentSubTitle" placeholder="Subtitel"
                 name="servicesContentSubTitle" [(ngModel)]="services.subTitle" #servicesContentSubTitleInput="ngModel"
@@ -61,7 +61,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Content text</mat-label>
               <textarea rows="1" matInput type="text" id="servicesContentText" placeholder="Text"
                 name="servicesContentText" [(ngModel)]="services.text" #servicesContentTextInput="ngModel"
@@ -74,7 +74,7 @@
 
           <div class="form-group row">
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard0Title" placeholder="Titel" name="servicesCard0Title"
                   [(ngModel)]="services.services[0].title" #servicesCard0TitleInput="ngModel" required>
@@ -83,7 +83,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card0Icon" placeholder="Icon" name="card0Icon"
                   [(ngModel)]="services.services[0].icon" #card0IconInput="ngModel" required>
@@ -92,7 +92,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="servicesCard0Text" placeholder="Text" name="servicesCard0Text"
                   [(ngModel)]="services.services[0].description">
@@ -100,7 +100,7 @@
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard1Title" placeholder="Titel" name="servicesCard1Title"
                   [(ngModel)]="services.services[1].title" #servicesCard1TitleInput="ngModel" required>
@@ -109,7 +109,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card1Icon" placeholder="Icon" name="card1Icon"
                   [(ngModel)]="services.services[1].icon" #card1IconInput="ngModel" required>
@@ -118,7 +118,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="servicesCard1Text" placeholder="Text" name="servicesCard1Text"
                   [(ngModel)]="services.services[1].description">
@@ -126,7 +126,7 @@
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard2Title" placeholder="Titel" name="servicesCard2Title"
                   [(ngModel)]="services.services[2].title" #servicesCard2TitleInput="ngModel" required>
@@ -135,7 +135,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card2Icon" placeholder="Icon" name="card2Icon"
                   [(ngModel)]="services.services[2].icon" #card2IconInput="ngModel" required>
@@ -144,7 +144,7 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="servicesCard2Text" placeholder="Text" name="servicesCard2Text"
                   [(ngModel)]="services.services[2].description">
