--- a/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pt-5" *ngIf="footerContent">
+<div class="container-fluid pt-5" *ngIf="footerContent && generalContent">
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
@@ -18,7 +18,7 @@
         <form (ngSubmit)="onSubmit()" #footerForm="ngForm">
           <div class="form-group row">
             <div class="col-sm-12 col-md-6">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Over titel</mat-label>
                 <input matInput type="text" id="aboutTitle" placeholder="Titel" name="aboutTitle"
                   [(ngModel)]="footerContent.aboutTitle" #aboutTitle="ngModel" required />
@@ -26,7 +26,7 @@
                   Titel is verplicht
                 </mat-error>
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Over tekst</mat-label>
                 <textarea matInput rows="3" [(ngModel)]="footerContent.aboutText" name="aboutText" id="aboutText"
                   type="text" #aboutText="ngModel" required>
@@ -37,7 +37,7 @@
               </mat-form-field>
             </div>
             <div class="col-sm-12 col-md-6">
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Social media titel</mat-label>
                 <input matInput type="text" id="socialTitle" placeholder="Titel" name="socialTitle"
                   [(ngModel)]="footerContent.socialTitle" #socialTitle="ngModel" required />
@@ -45,7 +45,7 @@
                   Social media titel is verplicht
                 </mat-error>
               </mat-form-field>
-              <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
                 <mat-label>Social media tekst</mat-label>
                 <textarea matInput rows="3" [(ngModel)]="footerContent.socialText" name="socialText" id="socialText"
                   type="text" #socialText="ngModel" required>
@@ -58,7 +58,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Facebook link</mat-label>
               <input matInput type="text" id="facebookLink" placeholder="Tekst" name="facebookLink"
                 [(ngModel)]="footerContent.facebookLink" />
@@ -67,7 +67,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Instagram link</mat-label>
               <input matInput type="text" id="instaLink" placeholder="Tekst" name="instaLink"
                 [(ngModel)]="footerContent.instagramLink" />
@@ -76,7 +76,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Twitter link</mat-label>
               <input matInput type="text" id="twitterLink" placeholder="Tekst" name="twitterLink"
                 [(ngModel)]="footerContent.twitterLink" />
@@ -85,7 +85,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Footer tekst</mat-label>
               <input matInput type="text" id="footerText" placeholder="Tekst" name="footerText"
                 [(ngModel)]="footerContent.footerText" #footerText="ngModel" required />
