--- a/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pt-5" *ngIf="navContent">
+<div class="container-fluid pt-5" *ngIf="navContent && generalContent">
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
@@ -19,7 +19,7 @@
         <form (ngSubmit)="onSubmit()" #navigationForm="ngForm">
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Titel</mat-label>
               <input matInput type="text" id="title" placeholder="Titel" name="title" [(ngModel)]="navContent.brandName"
                 #navTitle="ngModel" required>
@@ -30,10 +30,10 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
               <mat-label>Logo</mat-label>
               <input matInput type="text" id="logo" placeholder="Logo" name="logo" [(ngModel)]="navContent.brandImage"
-                #navLogo="ngModel" required>
+                #navLogo="ngModel" disabled>
               <mat-error [hidden]="navLogo.valid || navLogo.pristine">
                 Logo is verplicht
               </mat-error>
@@ -41,12 +41,12 @@
           </div>
 
           <div class="form-group row" *ngFor="let navlink of navContent.navLinks; index as i">
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-5">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-5">
               <mat-label>Label</mat-label>
               <input matInput [(ngModel)]="navlink.label" type="text" [id]="navlink.label" [name]="navlink.label"
                 placeholder="Label" required>
             </mat-form-field>
-            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-5">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-5">
               <mat-label>Router link</mat-label>
               <input matInput [(ngModel)]="navlink.routerLink" type="text" [id]="navlink.routerLink"
                 [name]="navlink.routerLink" placeholder="Router link" required>
