--- a/angular-web-app/src/app/components/_admin/manager-users/manager-users.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-users/manager-users.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5" *ngIf="generalContent">
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
@@ -9,7 +9,7 @@
 
     <div class="col-12">
       <!-- Table Filter -->
-      <mat-form-field [appearance]="formStyle" [color]="formColor" class="w-100">
+      <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="w-100">
         <button mat-button matPrefix mat-icon-button>
           <mat-icon>search</mat-icon>
         </button>
@@ -93,7 +93,7 @@
         <h4 class="title-underlined">Toevoegen</h4>
         <form (ngSubmit)="onSubmit()" #signUpForm="ngForm">
           <div class="form-group">
-            <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="w-100">
               <mat-label>E-mail</mat-label>
               <input matInput type="text" placeholder="info@spavento.com" [(ngModel)]="form.email" name="email"
                 id="email" #emailInput="ngModel" required />
@@ -104,7 +104,7 @@
           </div>
 
           <div class="form-group">
-            <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="w-100">
               <mat-label>Wachtwoord</mat-label>
               <input matInput type="password" placeholder="Wachtwoord" [(ngModel)]="form.password" name="password"
                 id="password" #passwordInput="ngModel" required />
@@ -115,7 +115,7 @@
           </div>
 
           <div class="form-group">
-            <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="w-100">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="w-100">
               <mat-label>Bevestig wachtwoord</mat-label>
               <input matInput type="password" placeholder="Wachtwoord" [(ngModel)]="form.confirmPassword"
                 name="confirmPassword" id="confirmPassword" #confirmPasswordInput="ngModel" required />
@@ -151,21 +151,21 @@
 
       <form #editUserForm="ngForm" style="width: 400px;">
         <div class="form-group row">
-          <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="col-12">
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="col-12">
             <mat-label>Foto</mat-label>
             <input matInput type="text" [(ngModel)]="modalUser.photoURL" name="photoURL" id="photoURL"
               #photoURLInput="ngModel" />
           </mat-form-field>
         </div>
         <div class="form-group row">
-          <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="col-12">
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="col-12">
             <mat-label>Naam</mat-label>
             <input matInput type="text" [(ngModel)]="modalUser.displayName" name="displayName" id="displayName"
               #displayNameInput="ngModel" />
           </mat-form-field>
         </div>
         <div class="form-group row">
-          <mat-form-field appearance="{{ formStyle }}" color="{{ formColor }}" class="col-12">
+          <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="col-12">
             <mat-label>Email</mat-label>
             <input matInput type="text" [(ngModel)]="modalUser.email" name="userEmail" id="userEmail"
               #userEmailInput="ngModel" />
