--- a/angular-web-app/src/app/components/_admin/page-contact/page-contact.component.html
+++ b/angular-web-app/src/app/components/_admin/page-contact/page-contact.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid py-5">
+<div class="container-fluid py-5" *ngIf="generalContent">
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text"  [admin]="true">
   </app-section-title>
 
@@ -26,7 +26,7 @@
           <h4 class="title-underlined mb-0 mt-2">Header</h4>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <app-comp-header [page]="'contact'"></app-comp-header>
+      <app-comp-header [page]="'contact'" [generalContent]="generalContent"></app-comp-header>
       <mat-action-row>
         <button mat-raised-button color="accent" (click)="nextStep()">Volgende</button>
       </mat-action-row>
@@ -39,7 +39,7 @@
           <h4 class="title-underlined mb-0 mt-2">Cards</h4>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <app-comp-contact-cards></app-comp-contact-cards>
+      <app-comp-contact-cards [generalContent]="generalContent"></app-comp-contact-cards>
       <mat-action-row>
         <button mat-raised-button color="primary" (click)="prevStep()">Vorige</button>
         <button mat-raised-button color="accent" (click)="nextStep()">Volgende</button>
@@ -53,7 +53,7 @@
           <h4 class="title-underlined mb-0 mt-2">Formulier</h4>
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <app-comp-contact-form></app-comp-contact-form>
+      <app-comp-contact-form [generalContent]="generalContent"></app-comp-contact-form>
       <mat-action-row>
         <button mat-raised-button color="primary" (click)="prevStep()">Vorige</button>
         <!-- <button mat-raised-button color="accent" (click)="nextStep()">Volgende</button> -->
